# Mini-test

./: main.py  models.py  pyproject.toml  test_main.py
